backport43 - Fixing missing TOC. Existing pages tidy up.

--- a/modules/reference/pages/spacecmd/softwarechannel.adoc
+++ b/modules/reference/pages/spacecmd/softwarechannel.adoc
@@ -3,39 +3,63 @@
 
 The following spacecmd functions are available for working with software channels.
 
-softwarechannel_adderrata::
+
+
+== softwarechannel_adderrata
+
 Add patches from one channel into another channel.
-+
+
+[source]
 ----
 usage: softwarechannel_adderrata SOURCE DEST <ERRATA|search:XXX ...>
 Options:
     -q/--quick : Don't display list of packages (slightly faster)
     -s/--skip :  Skip errata which appear to exist already in DEST
 ----
-softwarechannel_adderratabydate::
+
+
+
+== softwarechannel_adderratabydate
+
 Add errata from one channel into another channel based on a date range.
-+
+
+[source]
 ----
 usage: softwarechannel_adderratabydate [options] SOURCE DEST BEGINDATE ENDDATE
 Date format : YYYYMMDD
 Options:
         -p/--publish : Publish errata to the channel (don't clone)
 ----
-softwarechannel_addpackages::
+
+
+
+== softwarechannel_addpackages
+
 Add packages to a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_addpackages CHANNEL <PACKAGE ...>
 ----
-softwarechannel_addrepo::
+
+
+
+== softwarechannel_addrepo
+
 Add a repo to a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_addrepo CHANNEL REPO
 ----
-softwarechannel_clone::
+
+
+
+== softwarechannel_clone
+
 Clone a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_clone [options]
 
@@ -52,9 +76,14 @@ options:
   --regex/-x "s/foo/bar" : Optional regex replacement,
         replaces foo with bar in the clone name and label
 ----
-softwarechannel_clonetree::
+
+
+
+== softwarechannel_clonetree
+
 Clone a software channel and its child channels.
-+
+
+[source]
 ----
 usage: softwarechannel_clonetree [options]A
              e.g    softwarechannel_clonetree foobasechannel -p "my_"
@@ -72,9 +101,14 @@ options:
   --regex/-x "s/foo/bar" : Optional regex replacement,
         replaces foo with bar in the clone name, label and description
 ----
-softwarechannel_create::
+
+
+
+== softwarechannel_create
+
 Create a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_create [options]
 
@@ -89,69 +123,119 @@ options:
   -i GPG_ID
   -f GPG_FINGERPRINT
 ----
-softwarechannel_delete::
+
+
+
+== softwarechannel_delete
+
 Delete a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_delete <CHANNEL ...>
 ----
-softwarechannel_details::
+
+
+
+== softwarechannel_details
+
 Show the details of a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_details <CHANNEL ...>
 ----
-softwarechannel_diff::
+
+
+
+== softwarechannel_diff
+
 Check the difference between software channels.
-+
+
+[source]
 ----
 usage: softwarechannel_diff SOURCE_CHANNEL TARGET_CHANNEL
 ----
-softwarechannel_errata_diff::
+
+
+
+== softwarechannel_errata_diff
+
 Check the difference between software channel files.
-+
+
+[source]
 ----
 usage: softwarechannel_errata_diff SOURCE_CHANNEL TARGET_CHANNEL
 ----
-softwarechannel_errata_sync::
+
+
+
+== softwarechannel_errata_sync
+
 Sync errata of two software channels.
-+
+
+[source]
 ----
 usage: softwarechannel_errata_sync SOURCE_CHANNEL TARGET_CHANNEL
 ----
-softwarechannel_getorgaccess::
+
+
+
+== softwarechannel_getorgaccess
+
 Get the org-access for the software channel.
-+
+
+[source]
 ----
 usage : softwarechannel_getorgaccess : get org access for all channels
 usage : softwarechannel_getorgaccess <channel_label(s)> : get org access for specific channel(s)
 ----
-softwarechannel_list::
+
+
+
+== softwarechannel_list
+
 List all available software channels.
-+
+
+[source]
 ----
 usage: softwarechannel_list [options]'
 options:
   -v verbose (display label and summary)
   -t tree view (pretty-print child-channels)
 ----
-softwarechannel_listallpackages::
+
+
+
+== softwarechannel_listallpackages
+
 List all packages in a channel.
-+
+
+[source]
 ----
 usage: softwarechannel_listallpackages CHANNEL
 ----
-softwarechannel_listbasechannels::
+
+
+
+== softwarechannel_listbasechannels
+
 List all base software channels.
-+
+
+[source]
 ----
 usage: softwarechannel_listbasechannels [options]
 options:
   -v verbose (display label and summary)
 ----
-softwarechannel_listchildchannels::
+
+
+
+== softwarechannel_listchildchannels
+
 List child software channels.
-+
+
+[source]
 ----
 usage:
 softwarechannel_listchildchannels [options]
@@ -160,119 +244,210 @@ softwarechannel_listchildchannels CHANNEL : List children for a specific base ch
 options:
  -v verbose (display label and summary)
 ----
-softwarechannel_listerrata::
+
+
+
+== softwarechannel_listerrata
+
 List the errata associated with a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_listerrata <CHANNEL ...> [from=yyyymmdd [to=yyyymmdd]]
 ----
-softwarechannel_listerratabydate::
+
+
+
+== softwarechannel_listerratabydate
+
 List errata from channelbased on a date range.
-+
+
+[source]
 ----
 usage: softwarechannel_listerratabydate CHANNEL BEGINDATE ENDDATE
 Date format : YYYYMMDD
 ----
-softwarechannel_listlatestpackages::
+
+
+
+== softwarechannel_listlatestpackages
+
 List the newest version of all packages in a channel.
-+
+
+[source]
 ----
 usage: softwarechannel_listlatestpackages CHANNEL
 ----
-softwarechannel_listpackages::
+
+
+
+== softwarechannel_listpackages
+
 List the most recent packages available from a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_listpackages CHANNEL
 ----
-softwarechannel_listrepos::
+
+
+
+== softwarechannel_listrepos
+
 List the repos for a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_listrepos CHANNEL
 ----
-softwarechannel_listsyncschedule::
+
+
+
+== softwarechannel_listsyncschedule
+
+
 List sync schedules for all software channels.
-+
+
+[source]
 ----
 usage: softwarechannel_listsyncschedule : List all channels
 ----
-softwarechannel_listsystems::
+
+
+
+== softwarechannel_listsystems
+
 List all systems subscribed to a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_listsystems CHANNEL
 ----
-softwarechannel_mirrorpackages::
+
+
+
+== softwarechannel_mirrorpackages
+
 Download packages of a given channel.
-+
+
+[source]
 ----
 usage: softwarechannel_mirrorpackages CHANNEL
 Options:
     -l/--latest : Only mirror latest package version
 ----
-softwarechannel_regenerateneededcache::
+
+
+
+== softwarechannel_regenerateneededcache
+
 Regenerate the needed errata and package cache for all systems.
-+
+
+[source]
 ----
 usage: softwarechannel_regenerateneededcache
 ----
-softwarechannel_regenerateyumcache::
+
+
+
+== softwarechannel_regenerateyumcache
+
 Regenerate the YUM cache for a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_regenerateyumcache <CHANNEL ...>
 ----
-softwarechannel_removeerrata::
+
+
+
+== softwarechannel_removeerrata
+
 Remove patches from a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_removeerrata CHANNEL <ERRATA:search:XXX ...>
 ----
-softwarechannel_removepackages::
+
+
+
+== softwarechannel_removepackages
+
 Remove packages from a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_removepackages CHANNEL <PACKAGE ...>
 ----
-softwarechannel_removerepo::
+
+
+
+== softwarechannel_removerepo
+
 Remove a repo from a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_removerepo CHANNEL REPO
 ----
-softwarechannel_removesyncschedule::
+
+
+
+== softwarechannel_removesyncschedule
+
 Removes the repo sync schedule for a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_setsyncschedule <CHANNEL>
 ----
-softwarechannel_setorgaccess::
+
+
+
+== softwarechannel_setorgaccess
+
 Set the org-access for the software channel.
-+
+
+[source]
 ----
 usage : softwarechannel_setorgaccess <channel_label> [options]
 -d,--disable : disable org access (private, no org sharing)
 -e,--enable : enable org access (public access to all trusted orgs)
 ----
-softwarechannel_setsyncschedule::
+
+
+
+== softwarechannel_setsyncschedule
+
 Sets the repo sync schedule for a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_setsyncschedule <CHANNEL> <SCHEDULE>
 
 The schedule is specified in Quartz CronTrigger format without enclosing quotes.
 For example, to set a schedule of every day at 1am, <SCHEDULE> would be 0 0 1 * * ?
 ----
-softwarechannel_sync::
+
+
+
+== softwarechannel_sync
+
 Sync the packages of two software channels.
-+
+
+[source]
 ----
 usage: softwarechannel_sync SOURCE_CHANNEL TARGET_CHANNEL
 ----
-softwarechannel_syncrepos::
+
+
+
+== softwarechannel_syncrepos
+
 Sync users repos for a software channel.
-+
+
+[source]
 ----
 usage: softwarechannel_syncrepos <CHANNEL ...>
 ----
