note about Oracle uln mirrors #1212032 (#2297)
* SUSE Manager and Oracle Unbreakable Linux Network mirroring requirements (bsc#1212032)
https://github.com/SUSE/spacewalk/issues/21718
https://bugzilla.suse.com/show_bug.cgi?id=1212032

--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -11,6 +11,14 @@ ifeval::[{suma-content} == true]
 ====
 endif::[]
 
+[NOTE]
+====
+Direct synchronizing Unbreakable Linux Network (ULN) repositories with {productname} are not currently supported.
+An Oracle Local Distribution for ULN must be used.
+For more information about setting up a local ULN mirror, see the Oracle documentation provided at https://docs.oracle.com/en/operating-systems/oracle-linux/software-management/sfw-mgmt-UseSoftwareDistributionMirrors.html#local-uln-mirror.
+====
+
+
 
 [IMPORTANT]
 ====
