--- a/modules/reference/pages/spacecmd/report.adoc
+++ b/modules/reference/pages/spacecmd/report.adoc
@@ -3,27 +3,46 @@
 
 The following spacecmd functions are available for working with reports.
 
-report_duplicates::
+
+
+== report_duplicates
+
 List duplicate system profiles.
-+
+
+[source]
 ----
 usage: report_duplicates
 ----
-report_errata::
+
+
+
+== report_errata
+
 List all errata and how many systems they affect.
-+
+
+[source]
 ----
 usage: report_errata [ERRATA|search:XXX ...]
 ----
-report_inactivesystems::
+
+
+
+== report_inactivesystems
+
 List all inactive systems.
-+
+
+[source]
 ----
 usage: report_inactivesystems [DAYS]
 ----
-report_ipaddresses::
+
+
+
+== report_ipaddresses
+
 List the hostname and IP of each system.
-+
+
+[source]
 ----
 usage: report_network [<SYSTEMS>]
 
@@ -34,9 +53,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-report_kernels::
+
+
+
+== report_kernels
+
 List the running kernel of each system.
-+
+
+[source]
 ----
 usage: report_kernels [<SYSTEMS>]
 
@@ -47,15 +71,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-report_outofdatesystems::
+
+
+
+== report_outofdatesystems
+
 List all out-of-date systems.
-+
+
+[source]
 ----
 usage: report_outofdatesystems
 ----
-report_ungroupedsystems::
+
+
+
+== report_ungroupedsystems
+
 List all ungrouped systems.
-+
+
+[source]
 ----
 usage: report_ungroupedsystems
 ----
