--- a/modules/reference/pages/spacecmd/schedule.adoc
+++ b/modules/reference/pages/spacecmd/schedule.adoc
@@ -3,27 +3,46 @@
 
 The following spacecmd functions are available for working with scheduling.
 
-schedule_cancel::
+
+
+== schedule_cancel
+
 Cancel a scheduled action.
-+
+
+[source]
 ----
 usage: schedule_cancel ID|* ...
 ----
-schedule_details::
+
+
+
+== schedule_details
+
 Show the details of a scheduled action.
-+
+
+[source]
 ----
 usage: schedule_details ID
 ----
-schedule_getoutput::
+
+
+
+== schedule_getoutput
+
 Show the output from an action.
-+
+
+[source]
 ----
 usage: schedule_getoutput ID
 ----
-schedule_list::
+
+
+
+== schedule_list
+
 List all actions.
-+
+
+[source]
 ----
 usage: schedule_list [BEGINDATE] [ENDDATE]
 
@@ -41,9 +60,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-schedule_listarchived::
+
+
+
+== schedule_listarchived
+
 List archived actions.
-+
+
+[source]
 ----
 usage: schedule_listarchived [BEGINDATE] [ENDDATE]
 
@@ -61,9 +85,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-schedule_listcompleted::
+
+
+
+== schedule_listcompleted
+
 List completed actions.
-+
+
+[source]
 ----
 Dates can be any of the following:
 Explicit Dates:
@@ -79,9 +108,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-schedule_listfailed::
+
+
+
+== schedule_listfailed
+
 List failed actions.
-+
+
+[source]
 ----
 usage: schedule_listfailed [BEGINDATE] [ENDDATE]
 
@@ -99,9 +133,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-schedule_listpending::
+
+
+
+== schedule_listpending
+
 List pending actions.
-+
+
+[source]
 ----
 usage: schedule_listpending [BEGINDATE] [ENDDATE]
 
@@ -119,9 +158,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-schedule_reschedule::
+
+
+
+== schedule_reschedule
+
 Reschedule failed actions.
-+
+
+[source]
 ----
 usage: schedule_reschedule ID|* ...
 ----
