--- a/modules/reference/pages/spacecmd/system.adoc
+++ b/modules/reference/pages/spacecmd/system.adoc
@@ -3,9 +3,13 @@
 
 The following spacecmd functions are available for use with systems.
 
-system_addchildchannels::
+
+
+== system_addchildchannels
+
 Add child channels to a system.
-+
+
+[source]
 ----
 usage: system_addchildchannels <SYSTEMS> <CHANNEL ...>
 
@@ -16,9 +20,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_addconfigchannels::
+
+
+
+== system_addconfigchannels
+
 Add config channels to a system.
-+
+
+[source]
 ----
 usage: system_addconfigchannels <SYSTEMS> <CHANNEL ...> [options]
 
@@ -33,9 +42,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_addconfigfile::
+
+
+
+== system_addconfigfile
+
 Create a configuration file.
-+
+
+[source]
 ----
 Note this is only for system sandbox or locally-managed files
 Centrally managed files should be created via configchannel_addfile
@@ -61,9 +75,14 @@ options:
   allowed in XML) need to be sent as binary (-b).  Some effort is made to auto-
   detect files which require this, but you may need to explicitly specify.
 ----
-system_addcustomvalue::
+
+
+
+== system_addcustomvalue
+
 Set a custom value for a system.
-+
+
+[source]
 ----
 usage: system_addcustomvalue KEY VALUE <SYSTEMS>
 
@@ -74,9 +93,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_addentitlements::
+
+
+
+== system_addentitlements
+
 Add entitlements to a system.
-+
+
+[source]
 ----
 usage: system_addentitlements <SYSTEMS> ENTITLEMENT
 
@@ -87,9 +111,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_addnote::
+
+
+
+== system_addnote
+
 Set a note for a system.
-+
+
+[source]
 ----
 usage: system_addnote <SYSTEM> [options]
 
@@ -104,9 +133,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_applyerrata::
+
+
+
+== system_applyerrata
+
 Apply errata to a system.
-+
+
+[source]
 ----
 usage: system_applyerrata <SYSTEMS> [ERRATA|search:XXX ...]
 
@@ -117,9 +151,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_comparepackageprofile::
+
+
+
+== system_comparepackageprofile
+
 Compare a system against a package profile.
-+
+
+[source]
 ----
 usage: system_comparepackageprofile <SYSTEMS> PROFILE
 
@@ -130,15 +169,26 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_comparepackages::
+
+
+
+== system_comparepackages
+
 Compare the packages between two systems.
-+
+
+[source]
 ----
 usage: system_comparepackages SOME_SYSTEM ANOTHER_SYSTEM
 ----
-system_comparewithchannel::
+
+
+
+
+== system_comparewithchannel
+
 Compare the installed packages on a system with those in the channels it is registered to, or optionally some other channel.
-+
+
+[source]
 ----
 usage: system_comparewithchannel <SYSTEMS> [options]
 options:
@@ -153,9 +203,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_createpackageprofile::
+
+
+
+== system_createpackageprofile
+
 Create a package profile.
-+
+
+[source]
 ----
 usage: system_createpackageprofile SYSTEM [options]
 
@@ -163,9 +218,14 @@ options:
   -n NAME
   -d DESCRIPTION
 ----
-system_delete::
+
+
+
+== system_delete
+
 Delete a system profile.
-+
+
+[source]
 ----
 usage: system_delete <SYSTEMS>
 
@@ -176,9 +236,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_deletenotes::
+
+
+
+== system_deletenotes
+
 Delete notes from a system.
-+
+
+[source]
 ----
 usage: system_deletenotes <SYSTEM> <ID|*>
 
@@ -189,15 +254,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_deletepackageprofile::
+
+
+
+== system_deletepackageprofile
+
 Delete a package profile.
-+
+
+[source]
 ----
 usage: system_deletepackageprofile PROFILE
 ----
-system_deployconfigfiles::
+
+
+
+== system_deployconfigfiles
+
 Deploy all configuration files for a system.
-+
+
+[source]
 ----
 usage: system_deployconfigfiles <SYSTEMS>
 
@@ -208,9 +283,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_details::
+
+
+
+== system_details
+
 Show the details of a system profile.
-+
+
+[source]
 ----
 usage: system_details <SYSTEMS>
 
@@ -221,16 +301,26 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_getcrashfiles::
+
+
+
+== system_getcrashfiles::
+
 Download all files for a crash record.
-+
+
+[source]
 ----
 usage: system_getcrashfiles -c crash_id [--verbose]
 usage: system_getcrashfiles -c crash_id [--dest_folder=/tmp/crash_files] [--verbose]
 ----
-system_installpackage::
+
+
+
+== system_installpackage
+
 Install a package on a system.
-+
+
+[source]
 ----
 usage: system_installpackage <SYSTEMS> <PACKAGE ...>
 
@@ -241,15 +331,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_list::
+
+
+
+== system_list
+
 List all system profiles.
-+
+
+[source]
 ----
 usage: system_list
 ----
-system_listbasechannel::
+
+
+
+== system_listbasechannel
+
 List the base channel for a system.
-+
+
+[source]
 ----
 usage: system_listbasechannel <SYSTEMS>
 
@@ -260,9 +360,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listchildchannels::
+
+
+
+== system_listchildchannels
+
 List the child channels for a system.
-+
+
+[source]
 ----
 usage: system_listchildchannels <SYSTEMS>
 
@@ -273,9 +378,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listconfigchannels::
+
+
+
+== system_listconfigchannels
+
 List the config channels of a system.
-+
+
+[source]
 ----
 usage: system_listconfigchannels <SYSTEMS>
 
@@ -286,9 +396,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listconfigfiles::
+
+
+
+== system_listconfigfiles
+
 List the managed config files of a system.
-+
+
+[source]
 ----
 usage: system_listconfigfiles <SYSTEMS>'
 options:
@@ -304,15 +419,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listcrashesbysystem::
+
+
+
+== system_listcrashesbysystem
+
 List all reported crashes for a system.
-+
+
+[source]
 ----
 usage: system_listcrashesbysystem -i sys_id
 ----
-system_listcustomvalues::
+
+
+
+== system_listcustomvalues
+
 List the custom values for a system.
-+
+
+[source]
 ----
 usage: system_listcustomvalues <SYSTEMS>
 
@@ -323,9 +448,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listentitlements::
+
+
+
+== system_listentitlements
+
 List the entitlements for a system.
-+
+
+[source]
 ----
 usage: system_listentitlements <SYSTEMS>
 
@@ -336,9 +466,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listerrata::
+
+
+
+== system_listerrata
+
 List available errata for a system.
-+
+
+[source]
 ----
 usage: system_listerrata <SYSTEMS>
 
@@ -349,9 +484,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listevents::
+
+
+
+== system_listevents
+
 List the event history for a system.
-+
+
+[source]
 ----
 usage: system_listevents <SYSTEMS>
 
@@ -362,9 +502,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listhardware::
+
+
+
+== system_listhardware
+
 List the hardware details of a system.
-+
+
+[source]
 ----
 usage: system_listhardware <SYSTEMS>
 
@@ -375,9 +520,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listinstalledpackages::
+
+
+
+== system_listinstalledpackages
+
 List the installed packages on a system.
-+
+
+[source]
 ----
 usage: system_listinstalledpackages <SYSTEMS>
 
@@ -388,9 +538,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listnotes::
+
+
+
+== system_listnotes
+
 List the available notes for a system.
-+
+
+[source]
 ----
 usage: system_listnotes <SYSTEM>
 
@@ -401,15 +556,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_listpackageprofiles::
+
+
+
+== system_listpackageprofiles
+
 List all package profiles.
-+
+
+[source]
 ----
 usage: system_listpackageprofiles
 ----
-system_listupgrades::
+
+
+
+== system_listupgrades
+
 List the available upgrades for a system.
-+
+
+[source]
 ----
 usage: system_listupgrades <SYSTEMS>
 
@@ -420,9 +585,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_lock::
+
+
+
+== system_lock
+
 Lock a system.
-+
+
+[source]
 ----
 usage: system_lock <SYSTEMS>
 
@@ -433,9 +603,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_reboot::
+
+
+
+== system_reboot
+
 Reboot a system.
-+
+
+[source]
 ----
 usage: system_reboot <SYSTEMS>
 
@@ -446,9 +621,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_removechildchannels::
+
+
+
+== system_removechildchannels
+
 Remove child channels from a system.
-+
+
+[source]
 ----
 usage: system_removechildchannels <SYSTEMS> <CHANNEL ...>
 
@@ -459,9 +639,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_removeconfigchannels::
+
+
+
+== system_removeconfigchannels
+
 Remove config channels from a system.
-+
+
+[source]
 ----
 usage: system_removeconfigchannels <SYSTEMS> <CHANNEL ...>
 
@@ -472,9 +657,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_removecustomvalues::
+
+
+
+== system_removecustomvalues
+
 Remove a custom value for a system.
-+
+
+[source]
 ----
 usage: system_removecustomvalues <SYSTEMS> <KEY ...>
 
@@ -485,9 +675,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_removeentitlement::
+
+
+
+== system_removeentitlement
+
 Remove an entitlement from a system.
-+
+
+[source]
 ----
 usage: system_removeentitlement <SYSTEMS> ENTITLEMENT
 
@@ -498,9 +693,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_removepackage::
+
+
+
+== system_removepackage
+
 Remove a package from a system.
-+
+
+[source]
 ----
 usage: system_removepackage <SYSTEMS> <PACKAGE ...>
 
@@ -511,15 +711,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_rename::
+
+
+
+== system_rename
+
 Rename a system profile.
-+
+
+[source]
 ----
 usage: system_rename OLDNAME NEWNAME
 ----
-system_runscript::
+
+
+
+== system_runscript
+
 Schedule a script to run on the list of systems provided.
-+
+
+[source]
 ----
 usage: system_runscript <SYSTEMS> [options]
 
@@ -557,9 +767,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-system_schedulehardwarerefresh::
+
+
+
+== system_schedulehardwarerefresh
+
 Schedule a hardware refresh for a system.
-+
+
+[source]
 ----
 usage: system_schedulehardwarerefresh <SYSTEMS>
 
@@ -570,9 +785,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_schedulepackagerefresh::
+
+
+
+== system_schedulepackagerefresh
+
 Schedule a software package refresh for a system.
-+
+
+[source]
 ----
 usage: system_schedulepackagerefresh <SYSTEMS>
 
@@ -583,9 +803,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_search::
+
+
+
+== system_search
+
 List systems that match the given criteria.
-+
+
+[source]
 ----
 usage: system_search QUERY
 
@@ -603,9 +828,14 @@ Examples:
 > system_search device:vmware
 > system_search ip:192.168.82
 ----
-system_setbasechannel::
+
+
+
+== system_setbasechannel::
+
 Set a system's base software channel.
-+
+
+[source]
 ----
 usage: system_setbasechannel <SYSTEMS> CHANNEL
 
@@ -616,9 +846,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_setconfigchannelorder::
+
+
+
+== system_setconfigchannelorder
+
 Set the ranked order of configuration channels.
-+
+
+[source]
 ----
 usage: system_setconfigchannelorder <SYSTEMS>
 
@@ -629,9 +864,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_setcontactmethod::
+
+
+
+== system_setcontactmethod
+
 Set the contact method for a given system.
-+
+
+[source]
 ----
 Available contact methods: ['default', 'ssh-push', 'ssh-push-tunnel']
 usage: system_setcontactmethod <SYSTEMS> <CONTACT_METHOD>
@@ -643,9 +883,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_show_packageversion::
+
+
+
+== system_show_packageversion
+
 Shows version of installed package on a given system.
-+
+
+[source]
 ----
 usage: system_show_packageversion <SYSTEM> <PACKAGE>
 
@@ -656,15 +901,25 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_syncpackages::
+
+
+
+== system_syncpackages
+
 Sync packages between two systems.
-+
+
+[source]
 ----
 usage: system_syncpackages SOURCE TARGET
 ----
-system_unlock::
+
+
+
+== system_unlock
+
 Unlock a system.
-+
+
+[source]
 ----
 usage: system_unlock <SYSTEMS>
 
@@ -675,9 +930,14 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_updatecustomvalue::
+
+
+
+== system_updatecustomvalue
+
 Update a custom value for a system.
-+
+
+[source]
 ----
 usage: system_updatecustomvalue KEY VALUE <SYSTEMS>
 
@@ -688,9 +948,13 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-system_upgradepackage::
+
+
+== system_upgradepackage
+
 Upgrade a package on a system.
-+
+
+[source]
 ----
 usage: system_upgradepackage <SYSTEMS> <PACKAGE ...>|*
 
