16GB memory minimum for server installation for SUSE Manager and Uyuni, also for test installations https://github.com/SUSE/spacewalk/issues/21365

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -39,11 +39,7 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 | Minimum 4 dedicated 64-bit CPU cores ({x86_64})
 
 | RAM
-| Test Server
-| Minimum 8{nbsp}GB
-
-|
-| Base Installation
+| Test or Base Installation
 | Minimum 16{nbsp}GB
 
 |
@@ -89,11 +85,7 @@ ifeval::[{suma-content} == true]
 | Minimum 4 dedicated cores
 
 | RAM
-| Test Server
-| Minimum 8{nbsp}GB
-
-|
-| Base Installation
+| Test or Base Installation
 | Minimum 16{nbsp}GB
 
 |
