--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -30,7 +30,7 @@ Find the {minimalsles} image at https://download.suse.com/.
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
 | Version:            | SLES{sles-version}-{sp-version}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
-| Memory:             | 8192 MB
+| Memory:             | 16 GB
 | CPU's:              | 4
 | Storage Format:     | _.qcow2_ 24 GB (Default) Minimmal Root Partition
 | Virtual Disks:      |
@@ -55,7 +55,7 @@ Create three additional virtual disks required for the {productname} storage par
 
 .Procedure: Creating the Required Partitions with KVM
 . Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs (at least 8 GB RAM and 4 CPUs).
+. Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Click btn:[Add Hardware] to create three new virtual disks with these specifications.
   These disks will be partitioned and mounted in <<proc.minimmal.susemgr.prep>>.
