--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -24,11 +24,7 @@ The following tables specify the minimum server and proxy requirements.
 | Minimum 4 dedicated 64-bit CPU cores ({x86_64})
 
 | RAM
-| Test Server
-| Minimum 8{nbsp}GB
-
-|
-| Base Installation
+| Test or Base Installation
 | Minimum 16{nbsp}GB
 
 |
