information about client software providers in Client Configuration Guide normalized https://github.com/SUSE/spacewalk/issues/16224 Supersedes https://github.com/uyuni-project/uyuni-docs/pull/1656

--- a/modules/client-configuration/pages/clients-alibaba.adoc
+++ b/modules/client-configuration/pages/clients-alibaba.adoc
@@ -4,9 +4,12 @@
 This section contains information about registering traditional and Salt clients running {alibabaclo} operating systems.
 
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-{alibabaclo} repository URLs are available from {scc}, but the packages and metadata are provided by Alibaba Cloud, not by {suse}.
+* {alibabaclo} repository URLs are available from {scc}
+* Packages and metadata are provided by Alibaba Cloud, not by {suse}
+* For supported products, see the support table and the release notes
 ====
 endif::[]
 
