--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -3,15 +3,18 @@
 
 This section contains information about registering Salt clients running {almalinux} operating systems.
 
-Traditional clients are not available on {almalinux}.
-{almalinux} clients are only supported as Salt clients.
-
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-{almalinux} repository URLs are available from {scc}, but the packages and metadata are provided by AlmaLinux OS Foundation, not by {suse}.
+* {almalinux} repository URLs are available from {scc}
+* Packages and metadata are provided by AlmaLinux OS Foundation, not by {suse}
+* For supported products, see the support table and the release notes
 ====
 endif::[]
+
+Traditional clients are not available on {almalinux}.
+{almalinux} clients are only supported as Salt clients.
 
 [WARNING]
 ====
