--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -8,6 +8,18 @@ Traditional clients are not supported.
 
 Bootstrapping can be used with {debian} clients for performing initial state runs, and for profile updates.
 
+ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+[IMPORTANT]
+====
+* {debian} repository URLs are available from {scc}
+* Packages and metadata are provided by Debian, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
+////
+// 2022-07-26, ke: old abd probably outdated statement
 [IMPORTANT]
 ====
 {suse} does not provide support for {debian} operating systems.
@@ -16,6 +28,7 @@ Using {productname} to manage {debian} clients is experimental.
 These instructions have been tested on {debian}{nbsp}10 and {debian}{nbsp}11.
 Do not rely on {debian} clients in a production environment.
 ====
+////
 
 
 
