File name change.

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -15,6 +15,7 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 *** xref:supported-features-es.adoc[SUSE Liberty Linux Supported Features]
+*** xref:supported-features-sll.adoc[OM: SUSE Liberty Linux Supported Features]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
