--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -14,8 +14,7 @@ endif::[]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
 
 ifeval::[{suma-content} == true]
-*** xref:supported-features-es.adoc[SUSE Liberty Linux Supported Features]
-*** xref:supported-features-sll.adoc[OM: SUSE Liberty Linux Supported Features]
+*** xref:supported-features-sll.adoc[SUSE Liberty Linux Supported Features]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
