File name change.

--- a/modules/client-configuration/pages/supported-features-sll.adoc
+++ b/modules/client-configuration/pages/supported-features-sll.adoc
@@ -1,4 +1,4 @@
-[[supported-features-es]]
+[[supported-features-sll]]
 = Supported {sll} Features
 
 This table lists the availability of various features on {sll} clients.
