--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -3,6 +3,18 @@
 
 This section contains information about registering Salt clients running {rocky} operating systems.
 
+ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+[IMPORTANT]
+====
+* {rocky} repository URLs are available from {scc}
+* Packages and metadata are provided by Rocky Enterprise Software Foundation, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
+
+
 [NOTE]
 ====
 Registering {rocky} clients to {productname} is tested with the default SELinux configuration of ``enforcing`` with a ``targeted`` policy.
