--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -4,6 +4,17 @@
 This section contains information about registering Salt clients running {ubuntu} 18.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+[IMPORTANT]
+====
+* {ubuntu} 18.04 repository URLs are not available from {scc}
+* {ubuntu} 20.04 and 22.04 repository URLs are available from {scc}
+* Packages and metadata are provided by Ubuntu, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
+ifeval::[{suma-content} == true]
 
 {productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
 For information about registering Salt clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
