--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -7,10 +7,13 @@ Traditional clients are not available on {oracle} 9 and 8.
 {oracle} 9 and {oracle} 8 clients are only supported as Salt clients.
 
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-{oracle} repository URLs are available from {scc}, but the packages and metadata are provided by Oracle, not by {suse}.
-{oracle} base media repositories are freely available for download from https://yum.oracle.com/.
+* {oracle} repository URLs are available from {scc}
+* Packages and metadata are provided by Oracle, not by {suse}
+* {oracle} base media repositories are freely available for download from https://yum.oracle.com/
+* For supported products, see the support table and the release notes
 ====
 endif::[]
 
