--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -7,6 +7,16 @@ This section contains information about registering Salt clients running {ubuntu
 Traditional clients are not supported.
 
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+[IMPORTANT]
+====
+* {ubuntu} 20.04 and 22.04 repository URLs are available from {scc}
+* Packages and metadata are provided by Ubuntu, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
+ifeval::[{suma-content} == true]
 {productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
 For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
