Changed file location.

--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -213,7 +213,7 @@ This section contains information about the available parameters.
 `OutOfMemoryException` errors appear in `/var/log/rhn/rhn_web_ui.log`
 | Value default        | 1{nbsp}GiB
 | Value recommendation | 4-8{nbsp}GiB
-| Location             | [path]``/etc/sysconfig/tomcat``
+| Location             | [path]``/etc/tomcat/conf.d/tomcat_java_opts.conf``
 | Example              | `JAVA_OPTS="... -Xmx8G ..."`
 | After changing       | Check xref:memory-usage[memory usage]
 | More information     | https://docs.oracle.com/javase/8/docs/technotes/tools/windows/java.html
