add prelim info box

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -14,6 +14,20 @@ The {sll} software channels provided by {suse} only provide updates to packages,
 To register {sll} clients, you need to register the {sll} Product (outlined below) to create the necessary base channel, then import any required {redhat} or {centos} packages as custom child channels.
 You must obtain the initial packages directly from {redhat} or {centos} before you can apply the updates provided by the {sll} software channels.
 
+// FIXME!
+
+ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+[IMPORTANT]
+====
+* {sll} repository URLs are available from {scc}
+* Packages and metadata are provided by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
+
+
 
 [IMPORTANT]
 ====
