Replaced incorrect AutoYast text with the attribute.

--- a/modules/reference/pages/spacecmd/kickstart.adoc
+++ b/modules/reference/pages/spacecmd/kickstart.adoc
@@ -292,7 +292,7 @@ options:
 
 == kickstart_import_raw
 
-Import a raw Kickstart or autoyast profile from a file.
+Import a raw Kickstart or {ay} profile from a file.
 
 [source]
 --
