backport42 - Replaced incorrect AutoYast text with the attribute.

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -18,7 +18,7 @@ You can use both {ay} and {kickstart} profiles if you want to install clients wi
 
 For information about how to declare profiles, see xref:client-configuration:autoinst-profiles.adoc#declare-profile[Declare the Profile]
 
-For information about {ay} profiles, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles].
+For information about {ay} profiles, see xref:client-configuration:autoinst-profiles.adoc#autoyast[{ay} Profiles].
 
 For information about {kickstart} profiles, see xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
 
@@ -41,7 +41,7 @@ Alternatively, for {kickstart} only, you can use the {webui} wizard.
 
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles].
 
-. Click btn:[Upload Kickstart/Autoyast File].
+. Click btn:[Upload Kickstart/{ay} File].
 
 . In the [guimenu]``Label`` field, type a name for the profile.
   Do not use spaces.
@@ -53,7 +53,7 @@ Alternatively, for {kickstart} only, you can use the {webui} wizard.
 . Copy the contents of your autoinstallation file into the [guimenu]``File Contents`` field, or upload the file directly using the [guimenu]``File to Upload`` field.
 +
 
-For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
+For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[{ay} Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
 
 . Click btn:[Create] to create the profile.
 
@@ -101,7 +101,7 @@ Alternatively, navigate to menu:Systems[System List], select the client you want
 
 
 [[autoyast]]
-== AutoYast Profiles
+== {ay} Profiles
 
 An {ay} profile consists of a [guimenu]``Label`` that identifies the profile, an [guimenu]``Autoinstall Tree`` that points to an autoinstallable distribution, various options, and, most importantly, an {ay} installation file.
 
@@ -109,7 +109,7 @@ The {ay} installation file is an XML file that give directions to the {ay} insta
 For the full syntax of {ay} installation files, see https://doc.opensuse.org/projects/autoyast/#cha-configuration-installation-options.
 
 {suse} provides templates of {ay} installation files that you can use as a starting point for your own custom files.
-You will find the templates at https://github.com/SUSE/manager-build-profiles in the [path]``AutoYast`` directory.
+You will find the templates at https://github.com/SUSE/manager-build-profiles in the [path]``{ay}`` directory.
 Each of these profiles requires you to set some variables before you use it.
 Check the [path]``README`` file included with the script to determine which variables you need.
 For more information about using variables in {ay} scripts, see xref:client-configuration:autoinst-profiles#variables[Variables].
@@ -130,7 +130,7 @@ Here are the most important sections in the {ay} installation file for installin
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
 
-A more recent, Salt-based alternative to AutoYast, is Yomi.
+A more recent, Salt-based alternative to {ay}, is Yomi.
 For information about Yomi, see xref:salt:yomi.adoc[Install with Yomi].
 
 
