--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -39,7 +39,7 @@ Alternatively, for {kickstart} only, you can use the {webui} wizard.
 
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles].
 
-. Click btn:[Upload Kickstart/Autoyast File].
+. Click btn:[Upload Kickstart/{ay} File].
 
 . In the [guimenu]``Label`` field, type a name for the profile.
   Do not use spaces.
