--- a/modules/reference/pages/systems/autoinst-overview.adoc
+++ b/modules/reference/pages/systems/autoinst-overview.adoc
@@ -20,7 +20,7 @@ This section lists all clients that are scheduled for autoinstallation, along wi
 
 
 Click btn:[Create Kickstart Profile] to create a new {kickstart} profile.
-Click btn:[Upload Kickstart/Autoyast File] to upload a new autoinstallation file.
+Click btn:[Upload Kickstart/{ay} File] to upload a new autoinstallation file.
 
 
 For more information about autoinstallation, see xref:client-configuration:autoinst-intro.adoc[].
