--- a/modules/reference/pages/systems/autoinst-profiles.adoc
+++ b/modules/reference/pages/systems/autoinst-profiles.adoc
@@ -7,6 +7,6 @@ The list includes information about if the profile is active, the distribution i
 Click the name of a profile to see more information.
 
 Click btn:[Create Kickstart Profile] to create a new {kickstart} profile.
-Click btn:[Upload Kickstart/Autoyast File] to upload a new autoinstallation file.
+Click btn:[Upload Kickstart/{ay} File] to upload a new autoinstallation file.
 
 For more information about autoinstallation profiles, see xref:client-configuration:autoinst-profiles.adoc[].
