--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -62,7 +62,7 @@ You also need to have saved a copy of the ``id-susemanager`` key.
 * [path]``/var/lib/salt/``
 * [path]``/var/run/salt/``
 * [path]``/var/spacewalk/``
-* Any directories containing custom data such as scripts, Kickstart or AutoYaST profiles, and custom RPMs.
+* Any directories containing custom data such as scripts, Kickstart or {ay} profiles, and custom RPMs.
 
 [IMPORTANT]
 ====
