--- a/modules/reference/pages/systems/systems-overview.adoc
+++ b/modules/reference/pages/systems/systems-overview.adoc
@@ -55,7 +55,7 @@ For example, the standard Updates icon is linked to the [guimenu]``Upgrade`` sub
 * image:fa-warning.svg[Warning,scaledwidth=1.6em] -- Updates available and recommended.
 * image:fa-question-circle.svg[Question,scaledwidth=1.8em] -- System not checking in properly (for 24 hours or more).
 * image:fa-lock.svg[Lock,scaledwidth=1.8em] -- System is locked; actions prohibited.
-* image:fa-rocket.svg[Rocket,scaledwidth=1.6em] -- System is being deployed using AutoYaST or Kickstart.
+* image:fa-rocket.svg[Rocket,scaledwidth=1.6em] -- System is being deployed using {ay} or Kickstart.
 * image:fa-clock-o.svg[Clock,scaledwidth=1.8em] -- Updates have been scheduled.
 * image:fa-times-circle.svg[Times,scaledwidth=1.8em] -- System not entitled to any update service.
 +
