--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -99,7 +99,7 @@ Alternatively, navigate to menu:Systems[System List], select the client you want
 
 
 [[autoyast]]
-== AutoYast Profiles
+== {ay} Profiles
 
 An {ay} profile consists of a [guimenu]``Label`` that identifies the profile, an [guimenu]``Autoinstall Tree`` that points to an autoinstallable distribution, various options, and, most importantly, an {ay} installation file.
 
@@ -108,7 +108,7 @@ The {ay} installation file is an XML file that give directions to the {ay} insta
 For the full syntax of {ay} installation files, see https://doc.opensuse.org/projects/autoyast/#cha-configuration-installation-options.
 
 {suse} provides templates of {ay} installation files that you can use as a starting point for your own custom files.
-You will find the templates at https://github.com/SUSE/manager-build-profiles in the [path]``AutoYast`` directory.
+You will find the templates at https://github.com/SUSE/manager-build-profiles in the [path]``{ay}`` directory.
 Each of these profiles requires you to set some variables before you use it.
 Check the [path]``README`` file included with the script to determine which variables you need.
 For more information about using variables in {ay} scripts, see xref:client-configuration:autoinst-profiles#variables[Variables].
@@ -129,7 +129,7 @@ These are the most important sections in the {ay} installation file for installi
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
 
-A more recent, Salt-based alternative to AutoYast, is Yomi.
+A more recent, Salt-based alternative to {ay}, is Yomi.
 For information about Yomi, see xref:specialized-guides:salt/salt-yomi.adoc[Install with Yomi].
 
 
