--- a/modules/client-configuration/pages/virt-clusters.adoc
+++ b/modules/client-configuration/pages/virt-clusters.adoc
@@ -8,7 +8,7 @@ Manage clusters that you have registered with {productname} by navigating to men
 
 == Autoinstallation Profile
 
-{caasp}{nbsp}4 provides an AutoYaST profile that you can use to autoinstall a node.
+{caasp}{nbsp}4 provides an {ay} profile that you can use to autoinstall a node.
 The profile is in the ``patterns-caasp-Management`` package.
 //For more information about the profile, see https://documentation.suse.com/suse-caasp/4.2/single-html/caasp-deployment/#_autoyast_preparation.
 
