--- a/modules/client-configuration/pages/vhm-caasp.adoc
+++ b/modules/client-configuration/pages/vhm-caasp.adoc
@@ -67,7 +67,7 @@ Issuing those operations could render your {caasp} cluster unusable.
 
 == Autoinstallation Profile of a {caasp}{nbsp}4 Node
 
-{caasp}{nbsp}4 provides an AutoYaST profile that you can use to autoinstall a node.
+{caasp}{nbsp}4 provides an {ay} profile that you can use to autoinstall a node.
 The profile is in the ``patterns-caasp-Management`` package.
 For more information about the profile, see https://documentation.suse.com/suse-caasp/4.2/single-html/caasp-deployment/#_autoyast_preparation.
 
