--- a/modules/salt/pages/yomi.adoc
+++ b/modules/salt/pages/yomi.adoc
@@ -4,7 +4,7 @@
 Yomi (yet one more installer) is an installer for {suse} and openSUSE operating systems.
 Yomi is designed as a Salt state, and can be used for installing {suse} operating systems on new systems.
 
-In {productname}, Yomi can be used as part of provisioning new clients, as an alternative to AutoYaST.
+In {productname}, Yomi can be used as part of provisioning new clients, as an alternative to {ay}.
 
 Yomi consists of two components:
 
