--- a/modules/upgrade/pages/proxy-autoyast-uyuni.adoc
+++ b/modules/upgrade/pages/proxy-autoyast-uyuni.adoc
@@ -84,7 +84,7 @@ When you have created an autoinstallable distribution, you can edit it by naviga
 Autoinstallation profiles contain all the installation and configuration data needed to install a system.
 They can also contain scripts to be executed after the installation is complete.
 For example scripts that you can use as a starting point, see https://github.com/SUSE/manager-build-profiles/tree/master/AutoYaST.
-For valid AutoYaST upgrade settings, see https://doc.opensuse.org/projects/autoyast/#CreateProfile-upgrade.
+For valid {ay} upgrade settings, see https://doc.opensuse.org/projects/autoyast/#CreateProfile-upgrade.
 
 
 
