--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -72,7 +72,7 @@ If the invalid data are entered at any point, the newly created instance is show
 As soon as the authentication data is available on the server, the list of available products is updated.
 
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
-For example, if the instance has the {sles}{nbsp}15 SP1 product installed, {sles}{nbsp}15 SP2, {sles}{nbsp}15 SP3, {sles}{nbsp}15 SP4 and {sles}{nbsp}15 SP5 are automatically shown in [guimenu]``Admin > Setup Wizard > Products``. 
+For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2 and {slsa}{nbsp}15 SP3 are automatically shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
 Once the products are shown as available, the user can add a product to {productname} by selecting the checkbox next to the product name and clicking btn:[Add product].
 
@@ -145,4 +145,13 @@ Any of the following actions or changes in the {payg} instance will lead to cred
 * removing cloud-specific entries from [path]``/etc/hosts``
 ====
 
-For more about troubleshooting {payg}, see xref:administration:troubleshooting/tshoot-payg.adoc[].
+
+== Troubleshooting 
+
+Checking the credentials::
+* If the script fails to collect the credentials, it should provide a proper error message in the logs and in the {webui}.
+* If the credentials are not working, [literal]``reposync`` should show the proper error.
+
+Using [literal]``registercloudguest``::
+* Refreshing or changing the [literal]``registercloudguest`` connection to the public cloud update infrastructure should not interfere with the credentials usage.
+* Running [literal]```registercloudguest --clean`` will cause problems if no new cloud connection is registered with the cloud guest command.
