--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -17,7 +17,7 @@ Within {productname}, you can use two different types of profiles, depending on 
 You can use both {ay} and {kickstart} profiles if you want to install clients with different operating systems.
 
 * For information about how to declare profiles, see xref:client-configuration:autoinst-profiles.adoc#declare-profile[Declare the Profile]
-* For information about {ay} profiles, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles].
+* For information about {ay} profiles, see xref:client-configuration:autoinst-profiles.adoc#autoyast[{ay} Profiles].
 * For information about {kickstart} profiles, see xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
 
 The autoinstallation file contained in the profile can include variables and code snippets.
@@ -39,7 +39,7 @@ Alternatively, for {kickstart} only, you can use the {webui} wizard.
 
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles].
 
-. Click btn:[Upload Kickstart/Autoyast File].
+. Click btn:[Upload Kickstart/{ay} File].
 
 . In the [guimenu]``Label`` field, type a name for the profile.
   Do not use spaces.
@@ -51,7 +51,7 @@ Alternatively, for {kickstart} only, you can use the {webui} wizard.
 . Copy the contents of your autoinstallation file into the [guimenu]``File Contents`` field, or upload the file directly using the [guimenu]``File to Upload`` field.
 +
 
-For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
+For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[{ay} Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
 
 . Click btn:[Create] to create the profile.
 
@@ -100,7 +100,7 @@ Alternatively, navigate to menu:Systems[System List], select the client you want
 
 
 [[autoyast]]
-== AutoYast Profiles
+== {ay} Profiles
 
 An {ay} profile consists of a [guimenu]``Label`` that identifies the profile, an [guimenu]``Autoinstall Tree`` that points to an autoinstallable distribution, various options, and, most importantly, an {ay} installation file.
 
