Ccg software providers 2 #16224 keichwa (#2329)
* information about client software providers in Client Configuration Guide normalized
https://github.com/SUSE/spacewalk/issues/16224
Supersedes https://github.com/uyuni-project/uyuni-docs/pull/1656

--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -4,9 +4,12 @@
 This section contains information about registering traditional and Salt clients running {amazon} operating systems.
 
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-{amazon} repository URLs are available from {scc}, but the packages and metadata are provided by Amazon, not by {suse}.
+* {amazon} repository URLs are available from {scc}
+* Packages and metadata are provided by Amazon, not by {suse}
+* For supported products, see the support table and the release notes
 ====
 endif::[]
 
@@ -16,6 +19,8 @@ endif::[]
 Traditional clients are not available on {amazon}{nbsp}2.
 {amazon}{nbsp}2 clients are only supported as Salt clients.
 ====
+
+
 
 [WARNING]
 ====
