--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -3,6 +3,17 @@
 
 This section contains information about registering traditional and Salt clients running {centos} operating systems.
 
+ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+// Do we need to provide special info for uyuni users?
+[IMPORTANT]
+====
+* {centos} repository URLs are available from {scc}
+* Packages and metadata are provided by CentOS, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
 [IMPORTANT]
 ====
 {centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {es}.
