--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -4,10 +4,13 @@
 This section contains information about registering traditional and Salt clients running {oracle} operating systems.
 
 ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-{oracle} repository URLs are available from {scc}, but the packages and metadata are provided by Oracle, not by {suse}.
-{oracle} base media repositories are freely available for download from https://yum.oracle.com/.
+* {oracle} repository URLs are available from {scc}
+* Packages and metadata are provided by Oracle, not by {suse}
+* {oracle} base media repositories are freely available for download from https://yum.oracle.com/
+* For supported products, see the support table and the release notes
 ====
 endif::[]
 
