--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -14,7 +14,7 @@ For Control Nodes running operating systems other than SUSE Linux Enterprise, us
 {productname} enables system administrators to operate their Ansible Control Nodes.
 Supported features are:
 
-* introspection of inventory files
+* inspection of inventory files
 * discovery of playbooks
 * execution of playbooks
 
@@ -35,12 +35,14 @@ A playbook directory either directly contains the [literal]``site.yml`` or conta
 
 
 
-[[at.ansible.inventory-introspection]]
-== Inventory introspection
+[[at.ansible.inventory-inspection]]
+== Inventory inspection
 
-After defining an inventory path, you can use {productname} to introspect its contents.
-You can do so on the menu:System Details[Ansible > Inventories] page.
-Clicking an inventory path in this page executes the inventory introspection on the Control Node in real-time.
+After defining an inventory path, you can use {productname} to inspect its contents.
+
+.Procedure: Inspecting an inventory from the {webui}
+. In the {productname} {webui}, navigate to menu:System Details[Ansible > Inventories]
+. Click an inventory path to execute the inventory inspection on the Control Node in real-time.
 
 
 
