cleanup; move section

--- a/modules/administration/pages/ansible-integration.adoc
+++ b/modules/administration/pages/ansible-integration.adoc
@@ -51,7 +51,7 @@ After defining an inventory path, you can use {productname} to inspect its conte
 
 After defining a playbook directory, you can discover playbooks on the menu:System Details[Ansible > Playbooks] page.
 
-As with the inventory introspection, the playbook discovery operations run on the Control Node in real-time.
+As with the inventory inspection, the playbook discovery operations run on the Control Node in real-time.
 
 
 
