--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -5,7 +5,7 @@ To setup an Ansible control node, execute the following steps from the {productn
 
 .Procedure: Setup an Ansible control node
 
-. From the {webui} under menu:Admin[Setup Wizard > Products], verify that the product [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` channel and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` are installed and synchronized.
+. From the {webui} under menu:Admin[Setup Wizard > Products], verify that [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64`` and [literal]``SUSE Manager Client Tools for SLE 15 x86_64`` are selected and synchronized.
 
 . Deploy a {sle} 15 SP5 client.
 
@@ -17,7 +17,6 @@ To setup an Ansible control node, execute the following steps from the {productn
 ====
 The {productname} client tools contain the Ansible package.
 ====
-+
 
 . From the menu:System[Overview] page, select your client.
 
@@ -27,43 +26,6 @@ The {productname} client tools contain the Ansible package.
 
 . Select the menu:Events[] tab and verify the status of the highstate.
 
-
-
-
-[[install-scap-security-package]]
-== Install the SCAP security guide package
-
-For executing remediations you need to install the SCAP security guide package on the Ansible control node.
-
-.Procedure: Install the SCAP security guide package
-
-. From menu:Systems[Overview], select the client.
-  Then click menu:Software[Packages > Install].
-
-. Search for [literal]``scap-security-guide`` and install the package suitable for your system.
-  See the following table for package distribution requirements:
-+
-
-[cols="1,1", options="header"]
-.SCAP security guide package requirements
-|===
-
-| Package name
-| Supported Systems
-
-| scap-security-guide
-| OpenSUSE, SLES12, SLES15
-
-| scap-security-guide-redhat
-| CentOS 7, CentOS 8, Fedora, Oracle Linux 7, Oracle Linux 8, RHEL7, RHEL8, RHEL9, Red Hat OpenStack Platform 10, Red Hat OpenStack Platform 13, Red Hat Virtualization 4, Scientific Linux
-
-| scap-security-guide-debian
-| Debian 9, Debian 10
-
-| scap-security-guide-ubuntu
-|Ubuntu 16.04. Ubuntu 18.04, Ubuntu 20.04
-
-|===
 
 
 
