Replaced mixed spellings of openSUSE with the attribute {opensuse}

--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -1,8 +1,8 @@
 [[clients-opensuseleap]]
-= Registering openSUSE Leap Clients
+= Registering {opensise} Leap Clients
 
-This section contains information about registering Salt clients running openSUSE operating systems.
-{productname} supports openSUSE Leap 15 clients using Salt.
+This section contains information about registering {salt} clients running {opensuse} operating systems.
+{productname} supports {opensuse} Leap 15 clients using {salt}.
 Traditional clients are not supported.
 
 Bootstrapping is supported for starting openSUSE clients and performing initial state runs such as setting repositories and performing profile updates.
@@ -75,7 +75,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [[opensuse-channels-cli]]
 [cols="1,1,1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version
@@ -102,7 +102,7 @@ ifeval::[{uyuni-content} == true]
 |===
 
 [cols="1,1,1,1,1,1,1,1", options="header"]
-.OpenSUSE Channels - CLI
+.{opensuse} Channels - CLI
 |===
 
 | OS Version
